fix(floating-toolbar): should not wrap onto multiple lines

--- a/src/css/floating-toolbar.css
+++ b/src/css/floating-toolbar.css
@@ -9,7 +9,6 @@
   box-shadow: 0 2px 0 #00000005;
   padding: 4px;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
 }
 .lake-floating-toolbar .lake-toolbar-divider {
